--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>cloud-eureka-server-7001</module>
         <module>cloud-eureka-server-7002</module>
         <module>cloud-payment-provider-8082</module>
+        <module>cloud-payment-consul-provider-8003</module>
+        <module>cloud-order-consul-consumer-80</module>
     </modules>
 
     <groupId>com.selenium</groupId>
