--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <modules>
         <module>cloud-payment-provider-8081</module>
-        <module>cloud-order-comsumer-80</module>
+        <module>cloud-order-consumer-80</module>
         <module>cloud-api-common</module>
         <module>cloud-eureka-server-7001</module>
         <module>cloud-eureka-server-7002</module>
@@ -19,6 +19,9 @@
         <module>cloud-order-feign-hystrix-consumer-80</module>
         <module>cloud-hystrix-dashboard-9001</module>
         <module>cloud-gateway-9002</module>
+        <module>cloud-config-server-6001</module>
+        <module>cloud-config-client-6002</module>
+        <module>cloud-config-client-6003</module>
     </modules>
 
     <groupId>com.selenium</groupId>
